--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,9 +35,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "co.codeo.fluttergram"
-        minSdkVersion 16
+        applicationId "com.fluttergram"
+        minSdkVersion 19
         targetSdkVersion 30
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
