--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.codeo.fluttergram">
+    package="com.fluttergram">
    <application
         android:label="fluttergram"
         android:icon="@mipmap/ic_launcher">
